# cppKin

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  INSTALL.bat  INSTALL.sh  LICENSE  MANIFEST.in  README.md  appveyor.yml  cppKin.sh  cppkin.bat  cppkin.sh  setup.py
IDL/: GenerateZipkin.bash  GenerateZipkin.bat  Scribe.thrift  zipkinCore.thrift
bench/: BenchMark.cpp  CMakeLists.txt
cmake/: FindBOOST.cmake  FindBenchMark.cmake  FindBoost.cmake  FindBoost_Pack.cmake  FindBottle.cmake  FindCURL.cmake  FindCore.cmake  FindPOCO.cmake  FindPyBind.cmake  FindPython.cmake  FindRapidJson.cmake  FindSpdLog.cmake  FindSweetPy.cmake  FindThrift.cmake  InstallBOOST.cmake  InstallBenchMark.cmake  InstallBoost.cmake  InstallBoost_Pack.cmake  InstallBottle.cmake  InstallCURL.cmake  InstallCore.cmake  InstallPOCO.cmake  InstallPyBind.cmake  InstallRapidJson.cmake  InstallSpdLog.cmake  InstallSweetPy.cmake  InstallThrift.cmake  cppkinMacro.cmake  installThirdParty.cmake
cppkin/: __init__.py  cppkin.py
docs/: cpp_client.md  python_client.md
examples/: CMakeLists.txt  README.md  example.cpp
examples/cpp/: CMakeLists.txt  README.md  example.cpp
examples/python/: example.py
python/: CMakeLists.txt  cppkin.py  cppkinWrapper.cpp
src/: Annotation.cpp  Annotation.h  AnnotationType.cpp  AnnotationType.h  BinaryAnnotation.cpp  BinaryAnnotation.h  ConfigParams.cpp  ConfigParams.h  ConfigTags.cpp  ConfigTags.h  Control.cpp  Control.h  Encoder.cpp  Encoder.h  EncoderBase64.h  EncodingContext.cpp  EncodingContext.h  EncodingTypes.cpp  EncodingTypes.h  Export.h  GeneralParams.h  HttpTransport.cpp  HttpTransport.h  Init.cpp  Init.h  JsonEncoder.h  Param.h  Sampler.cpp  Sampler.h  ScribeTransport.cpp  ScribeTransport.h  SerializeContext.cpp  SerializeContext.h  SerializeType.cpp  SerializeType.h  Serializor.cpp  Serializor.h  SimpleAnnotation.cpp  SimpleAnnotation.h  Span.cpp  (+21 more)
tests/: CMakeLists.txt  server.py  tests.py  zipkinStubServer.py
tests/wrappers/: CMakeLists.txt  cppkinWrapper.cpp
