project(examples CXX)

if(${VC_VERSION} STREQUAL "12")
	set(toolset_version vc120)
else(${VC_VERSION} STREQUAL "14")
	set(toolset_version vc140)
endif()
set(boost_lib "boost_program_options-${toolset_version}-mt-${Boost_MAJOR_VERSION}_${Boost_MINOR_VERSION}_${Boost_SUBMINOR_VERSION}")
if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
    set(boost_lib "boost_program_options-${toolset_version}-mt-gd-${Boost_MAJOR_VERSION}_${Boost_MINOR_VERSION}_${Boost_SUBMINOR_VERSION}")
endif()

include_directories(.)
remove_definitions(-DCPPKIN_DLL)
add_executable(example example.cpp)

if(WIN32)
    add_definitions(-DBOOST_ALL_DYN_LINK)
    set(TO_LINK_LIBS cppkin ${boost_lib}.dll Core${CMAKE_DEBUG_POSTFIX}.dll libcurl)
else()
    set(TO_LINK_LIBS cppkin boost_program_options libCore${CMAKE_DEBUG_POSTFIX}.so curl)
endif()
target_link_libraries(example ${TO_LINK_LIBS})
